--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "echarts": "^5.4.3",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-seamless-scroll": "^2.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.2",
@@ -29,6 +31,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
+    "sass": "^1.68.0",
     "vite": "^4.4.9"
   },
   "lint-staged": {
