--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts": "^5.4.3",
     "echarts-wordcloud": "^2.1.0",
     "pinia": "^2.1.6",
+    "v-scale-screen": "^2.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue3-seamless-scroll": "^2.0.1"
